# graphics-programming-2023

./: .gitignore  CMakeLists.txt  README.md
exercises/: Additional C++.html  CMakeLists.txt  exercise_00.html  exercise_01.html  exercise_02.html  exercise_03.html  exercise_04.html  exercise_05.html  exercise_06.html  exercise_07.html  exercise_08.html  exercise_09.html  exercise_10.html  exercise_11.html
exercises/exercise00/: CMakeLists.txt  main.cpp
exercises/exercise01/: TerrainApplication.cpp  TerrainApplication.h  main.cpp
exercises/exercise02/: ParticlesApplication.cpp  ParticlesApplication.h  main.cpp
exercises/exercise02/shaders/: particles.frag  particles.vert
exercises/exercise03/: CMakeLists.txt  GearsApplication.cpp  GearsApplication.h  main.cpp
exercises/exercise03/shaders/: basic.frag  basic.vert
exercises/exercise04/: TexturedTerrainApplication.cpp  TexturedTerrainApplication.h  main.cpp
exercises/exercise04/shaders/: default.frag  terrain.frag  terrain.vert  water.frag  water.vert
exercises/exercise05/: CMakeLists.txt  ViewerApplication.cpp  ViewerApplication.h  main.cpp
exercises/exercise05/models/mill/: Mill.mtl
exercises/exercise05/shaders/: blinn-phong.frag  unlit.frag  unlit.vert
exercises/exercise06/Assets/Hatching/: Hatching.mat
exercises/exercise06/Assets/Models/Ball/: Ball.mat  ball.fbx  ball.prefab
exercises/exercise06/Assets/Models/Cow/: Cow.mat  Cow.prefab
exercises/exercise06/Assets/Models/Man/: Man.fbx  Man.mat
exercises/exercise06/Assets/Models/Plane/: White.mat
exercises/exercise06/Assets/Models/Teapot/: Teapot.mat  Teapot.prefab
exercises/exercise06/Assets/Models/Trees/: Bark.mat  Cartoon trees.FBX  Leaves.mat  Tree1.prefab  Tree2.prefab  Tree3.prefab
exercises/exercise06/Assets/Scenes/: SampleScene.unity
exercises/exercise06/Assets/Shaders/: CelShadingSolution.shader  DisplacementMap.shader  Hatching.shader  HatchingSolution.shader  ITUCG.glslinc  NormalMap.shader  Reflection.shader  Refraction.shader  SampleLit.shader  SampleUnlit.shader  TemplateLit.shader  TemplateUnlit.shader
exercises/exercise06/ProjectSettings/: GraphicsSettings.asset  ProjectSettings.asset
exercises/exercise07/: FirefliesApplication.cpp  FirefliesApplication.h  main.cpp
exercises/exercise07/models/firefly/: firefly.mtl
exercises/exercise07/models/floor/: floor.mtl
exercises/exercise07/shaders/: blinn-phong.glsl  deferred.frag  deferred.vert  gbuffer.frag  gbuffer.vert  lighting.glsl  lit.frag  lit.vert  utils.glsl
exercises/exercise08/: SceneViewerApplication.cpp  SceneViewerApplication.h  main.cpp
exercises/exercise08/models/alarm_clock/: alarm_clock.mtl
exercises/exercise08/models/camera/: camera.mtl
exercises/exercise08/models/tea_set/: tea_set.mtl
exercises/exercise08/models/treasure_chest/: treasure_chest.mtl
exercises/exercise08/shaders/: blinn-phong.glsl  default.frag  default.vert  default_pbr.frag  lambert-ggx.glsl  lighting.glsl  utils.glsl
exercises/exercise08/shaders/renderer/: skybox.frag  skybox.vert
exercises/exercise09/: PostFXSceneViewerApplication.cpp  PostFXSceneViewerApplication.h  main.cpp
exercises/exercise09/models/cannon/: cannon.mtl
exercises/exercise09/shaders/: default.frag  default.vert  lighting.glsl  utils.glsl
exercises/exercise09/shaders/postfx/: bloom.frag  blur.frag  compose.frag
exercises/exercise09/shaders/renderer/: deferred.frag  empty.frag  empty.vert
exercises/exercise10/: RaymarchingApplication.cpp  RaymarchingApplication.h  main.cpp
exercises/exercise10/shaders/: exercise10.glsl  raymarcher.glsl  raymarching.frag  sdflibrary.glsl  utils.glsl
exercises/exercise10/shaders/renderer/: fullscreen.vert
exercises/exercise11/: RaytracingApplication.cpp  RaytracingApplication.h  main.cpp
exercises/exercise11/shaders/: empty.glsl  exercise11.glsl  raylibrary.glsl  raytracer.glsl  raytracing.frag  transform.glsl  utils.glsl
exercises/exercise11/shaders/renderer/: copy.frag
libraries/assimp/: CMakeLists.txt
libraries/itugl/: CMakeLists.txt
libraries/itugl/include/ituGL/application/: Application.h  Window.h
libraries/itugl/include/ituGL/asset/: AssetLoader.h  ModelLoader.h  ShaderLoader.h  Texture2DLoader.h  TextureCubemapLoader.h  TextureLoader.h
libraries/itugl/include/ituGL/camera/: Camera.h  CameraController.h
libraries/itugl/include/ituGL/core/: BufferObject.h  Color.h  Data.h  DeviceGL.h  Object.h
libraries/itugl/include/ituGL/geometry/: Drawcall.h  ElementBufferObject.h  Mesh.h  Model.h  VertexArrayObject.h  VertexAttribute.h  VertexBufferObject.h  VertexFormat.h
libraries/itugl/include/ituGL/lighting/: DirectionalLight.h  Light.h  PointLight.h  SpotLight.h
libraries/itugl/include/ituGL/renderer/: DeferredRenderPass.h  ForwardRenderPass.h  GBufferRenderPass.h  PostFXRenderPass.h  RenderPass.h  Renderer.h  ShadowMapRenderPass.h  SkyboxRenderPass.h
libraries/itugl/include/ituGL/scene/: Bounds.h  ImGuiSceneVisitor.h  RendererSceneVisitor.h  Scene.h  SceneCamera.h  SceneLight.h  SceneModel.h  SceneNode.h  SceneVisitor.h  Transform.h
libraries/itugl/include/ituGL/shader/: Material.h  Shader.h  ShaderProgram.h  ShaderUniformCollection.h
libraries/itugl/include/ituGL/texture/: FramebufferObject.h  Texture2DObject.h  TextureCubemapObject.h  TextureObject.h
libraries/itugl/include/ituGL/utils/: DearImGui.h
libraries/itugl/src/ituGL/application/: Application.cpp  Window.cpp
libraries/itugl/src/ituGL/asset/: AssetLoader.cpp  ModelLoader.cpp  ShaderLoader.cpp  Texture2DLoader.cpp  TextureCubemapLoader.cpp  TextureLoader.cpp
libraries/itugl/src/ituGL/camera/: Camera.cpp  CameraController.cpp
libraries/itugl/src/ituGL/core/: BufferObject.cpp  Color.cpp  Data.cpp  DeviceGL.cpp  Object.cpp
libraries/itugl/src/ituGL/geometry/: Drawcall.cpp  ElementBufferObject.cpp  Mesh.cpp  Model.cpp  VertexArrayObject.cpp  VertexAttribute.cpp  VertexBufferObject.cpp  VertexFormat.cpp
libraries/itugl/src/ituGL/lighting/: DirectionalLight.cpp  Light.cpp  PointLight.cpp  SpotLight.cpp
libraries/itugl/src/ituGL/renderer/: DeferredRenderPass.cpp  (+7 more)
(+26 files in other folders)
